# plotiron

./: .gitignore  Cargo.toml  README.md
examples/: boxplot_demo.rs  contour_demo.rs  demo.rs  dot_simple.rs  heatmap_demo.rs  histogram_demo.rs  line.rs  pie_chart_demo.rs  simple.rs  simple_histogram.rs  test_generic_interface.rs  test_legend.rs  test_prelude.rs  test_subgraph.rs  violin_demo.rs
src/: axes.rs  colors.rs  dot_renderer.rs  figure.rs  lib.rs  markers.rs  plot.rs  prelude.rs  utils.rs  viewer.rs
src/dot/: layout.rs  mod.rs  parser.rs  renderer.rs  types.rs
