[package]
name = "plotiron"
version = "0.1.0"
edition = "2024"
description = "A Rust plotting library that integrates DOT graph rendering with traditional plotting capabilities"
license = "MIT"
keywords = ["dot", "plot"]
categories = ["visualization"]
repository = "https://github.com/passchaos/plotiron"

[dependencies]
svg = "*"
num-traits = "*"
rand = "*"
eframe = "*"
egui_extras = { version = "*", features = ["svg", "svg_text"] }
md-5 = "*"
