[package]
name = "plotiron"
version = "0.1.2"
edition = "2024"
description = "A Rust plotting library that integrates DOT graph rendering with traditional plotting capabilities"
license = "MIT"
keywords = ["dot", "plot"]
categories = ["visualization"]
repository = "https://github.com/passchaos/plotiron"

[dependencies]
num-traits = "0.2.19"
eframe = "0.32.3"
egui_extras = { version = "0.32.3", features = ["svg", "svg_text"] }
md-5 = "0.10.6"

[dev-dependencies]
rand = "0.9.2"
vectra = "0.1.2"
unicode-display-width = "0.3"
